--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mongoose": "^5.5.10",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
-    "validator": "^11.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "validator": "^11.0.0"
   }
 }
