--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Food Delivery",
+  "description": "Pizza Delivery application",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
-  "author": "Harshita Agarwal",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
@@ -19,14 +18,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^11.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HarshitaAgarwal09/pizza-delivery-Backend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/HarshitaAgarwal09/pizza-delivery-Backend/issues"
-  },
-  "homepage": "https://github.com/HarshitaAgarwal09/pizza-delivery-Backend#readme"
+    "validator": "^11.0.0",
+    "bcryptjs": "^2.4.3"
+  }
 }
