--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^11.0.0",
-    "bcryptjs": "^2.4.3"
+    "validator": "^11.0.0"
   }
 }
