--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.10",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
