--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
+    "uuid": "^3.3.2",
     "validator": "^11.0.0"
   }
 }
