--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
+    "shortid": "^2.2.14",
     "uuid": "^3.3.2",
     "validator": "^11.0.0"
   }
