--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.10",
-    "multer": "^1.4.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
-    "passport-jwt": "^4.0.0",
     "shortid": "^2.2.14",
-    "uuid": "^3.3.2",
-    "validator": "^11.0.0"
+    "uuid": "^3.3.2"
   }
 }
