--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport-google-oauth2": "^0.2.0",
     "shortid": "^2.2.14",
     "uuid": "^3.3.2"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
